added integeration test cases

--- a/cmd/Makefile
+++ b/cmd/Makefile
@@ -1,23 +1,17 @@
 #! /usr/bin/make
+SHELL := /bin/bash
+
 GOBUILD=go build
-SETUP_SWAG=go get -u github.com/paragtokopedia/swag/cmd/swag
-GENERATE_DOC=swag init
 BINARY_NAME=logistics
-MAIN_FILE=cmd/app.go
-RUN_INTEG_TEST=go test -v -cover -race ../integration_test
 SETUP_BOILER=go get -u -t github.com/volatiletech/sqlboiler && go get github.com/volatiletech/sqlboiler/drivers/sqlboiler-mysql
 
-all: boiler generate swag build run
+all: build run
 
-boiler-setup:
+boiler:
 	$(SETUP_BOILER)
 
 generate:
 	go generate
-
-swag:
-	$(SETUP_SWAG)
-	cd .. && $(GENERATE_DOC) -g $(MAIN_FILE)
 
 build:
 	$(GOBUILD) -o $(BINARY_NAME)
@@ -25,5 +19,9 @@ build:
 run:
 	./$(BINARY_NAME)
 
-integtest:
-	$(RUN_INTEG_TEST)
+docker-run:
+	docker build -t logistics ../ && docker run -p 8080:8080 logistics
+
+docker-dev-start:
+	docker-compose -f ../docker-compose.yml up --build
+
